--- a/client/src/components/DogCard/DogCard.module.css
+++ b/client/src/components/DogCard/DogCard.module.css
@@ -8,8 +8,7 @@
   margin: 10px;
   transition: transform 0.5s;
   padding: .5rem;
-  max-width: 30%;
-  min-width: 150px;
+  width: 200px;
   text-align: center;
 }
 .containerCard:hover {
