--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -1,6 +1,6 @@
 .navBar {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.6);
@@ -11,17 +11,27 @@
 }
 .containerBtn {
   margin: 0.5em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .navBtn {
   padding: 5px;
   width: 100px;
   margin: 0 1em 0 0;
   border: 0.1em solid darkgray;
-  border-radius: 5%;
+  border-radius: 5px;
+  transition: 200ms;
 }
 .navBtn:hover {
   cursor: pointer;
-  background-color: darkgray;
+  background-color: rgba(169, 169, 169, 0.7);
   border: 0.1em solid darkgray;
-  border-radius: 5%;
+  transform: scale(1.1);
+}
+.navBtn:focus {
+  transform: scale(1.1);
+  background-color: darkgray;
+  border: 0.12em solid rgba(0, 0, 0, 0.5);
+  text-decoration: underline;
 }
