--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -4,21 +4,22 @@
   align-items: center;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  height: 4em;
+  height: 5em;
   position: fixed;
   top: 0;
   z-index: 10000;
 }
 .containerBtn {
-  margin: 0.5em;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 .navBtn {
   padding: 5px;
   width: 100px;
-  margin: 0 1em 0 0;
+  margin: 0 1em 0.2em 1em;
   border: 0.1em solid darkgray;
   border-radius: 5px;
   transition: 200ms;
