--- a/client/src/views/Form/Form.module.css
+++ b/client/src/views/Form/Form.module.css
@@ -4,8 +4,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
-  width: 98%;
 }
 .form {
   display: flex;
@@ -29,15 +27,22 @@ label {
   font-weight: bold;
   margin-top:1em
 }
-.btn {
+.btnDisabled, .btnEnabled {
   position: relative;
   width: 100%;
   margin: 0.5em 0 0.5em 0;
   padding: 0.5em;
-  cursor: pointer;
   background-color: black;
   color: white;
   border-radius: 1em;
+}
+.btnDisabled {
+  cursor:not-allowed;
+  background-color: rgb(129, 11, 11);
+}
+.btnEnabled {
+  cursor: pointer;
+  background-color: rgba(0, 128, 0, 0.8);
 }
 .containerInput {
   display: flex;
@@ -92,4 +97,10 @@ input:focus {
 h4{
   margin: 0.5em 0 0.5em 0;
   color: white;
+}
+
+@media (max-width: 500px) {
+  .form {
+    width: 90%;
+  }
 }
