--- a/client/src/views/LandingPage/LandingPage.module.css
+++ b/client/src/views/LandingPage/LandingPage.module.css
@@ -15,11 +15,19 @@
   border-radius: 10px;
   margin: 15%;
   padding: 20px;
+  margin-top:0
 }
 .title{
     font-size: 60px;
     text-shadow: white 1px 0 10px;
     font-weight: bold;
+    margin: 0.5em;
+}
+.subtitle{
+  font-size: 25px;
+  text-shadow: white 2px 0 10px;
+  font-weight: bold;
+  margin: 0.5em;
 }
 .btnAccess {
   display: inline-block;
